subprojects {
    group = "app.river_crossing_game"
    version = '1.0.0'

    apply plugin: "java"

    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16

    repositories {
        mavenCentral()
        mavenLocal()
    }
}

configure(subprojects) {
    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
        testImplementation 'org.assertj:assertj-core:3.19.0'
    }

    test {
        useJUnitPlatform()
    }
}

allprojects {
    apply plugin: 'idea'
    idea.module.inheritOutputDirs = true
}

tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}

apply from: file("${rootDir}/gradle/check.gradle")
